// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interface extends 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`interface interface name as identifier 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`interface invalid private flag 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "B",
              },
              "value": Number {
                "kind": "number",
                "value": "1",
              },
            },
          ],
          "kind": "classconstant",
          "visibility": "",
        },
      ],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [
    Error {
      "expected": [
        195,
        196,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected 'private' (T_PRIVATE) on line 1",
      "token": "'private' (T_PRIVATE)",
    },
  ],
  "kind": "program",
}
`;

exports[`interface multiple extends 1`] = `
Program {
  "children": [
    Interface {
      "attrGroups": [],
      "body": [],
      "extends": [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
        Name {
          "kind": "name",
          "name": "C",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
